--- a/localapplication.html
+++ b/localapplication.html
@@ -242,7 +242,8 @@
           />
           <label for="PreferredBoothType_LargeBookStalls" class="form-label">
             <span class="from-label-header">書攤</span>
-            <span class="from-label-sub-header">3800 NTD 三日（未稅）</span>
+            <span class="from-label-sub-header">3800 NTD 三日（未稅）</span
+            ><br />
             <span class="from-label-description-header">
               檯面 1 個、椅子 2 張、工作證 2 張之基礎設備
             </span>
@@ -261,7 +262,8 @@
           />
           <label for="PreferredBoothType_CreativeProducts" class="form-label">
             <span class="from-label-header">創作商品</span>
-            <span class="from-label-sub-header">6500 NTD 三日（未稅）</span>
+            <span class="from-label-sub-header">6500 NTD 三日（未稅）</span
+            ><br />
             <span class="from-label-description-header">
               檯面 1 個、椅子 2 張、工作證 2 張之基礎設備
             </span>
@@ -276,7 +278,8 @@
           />
           <label for="PreferredBoothType_FoodBeverages" class="form-label">
             <span class="from-label-header">食物酒水</span>
-            <span class="from-label-sub-header">10000 NTD 三日（未稅）</span>
+            <span class="from-label-sub-header">10000 NTD 三日（未稅）</span
+            ><br />
             <span class="from-label-description-header">
               檯面 1 個、椅子 2 張、工作證 2 張之基礎設備
             </span>
@@ -296,7 +299,7 @@
           />
           <label for="PreferredBoothType_Curation" class="form-label">
             <span class="from-label-header">裝置類型攤位</span>
-            <span class="from-label-sub-header">免費 三日</span>
+            <span class="from-label-sub-header">免費 三日</span><br />
             <span class="from-label-description-header">
               僅錄取 2 名，2x2m 空地、工作證 2 張之基礎設備
             </span>
@@ -455,7 +458,6 @@
             />
             <input type="hidden" name="category" value="product" />
           </div>
-          <br />
           <textarea
             class="form-input-textarea"
             name="entry.1425905511"
