--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -222,7 +222,7 @@
           Detailed information about table sizes and the option to purchase
           additional work permits will be provided upon application approval.
         </div>
-        <div class="column layout-form-column-grid-2">
+        <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
           <input
             type="radio"
@@ -234,7 +234,9 @@
           />
           <label for="PreferredBoothType_OneRegularBooth" class="form-label">
             <span class="from-label-header">One Regular Booth</span>
-            <span class="from-label-sub-header">120 USD Including Tax</span>
+            <span style="font-weight: 200" class="from-label-sub-header"
+              >&nbsp;120 USD incl. tax</span
+            ><br />
             <span class="from-label-description-header">
               Includes 1 table, 2 chairs, and 2 exhibitor badges.
             </span>
@@ -249,7 +251,9 @@
           />
           <label for="PreferredBoothType_TwoRegularBooth" class="form-label">
             <span class="from-label-header">Two Regular Booths</span>
-            <span class="from-label-sub-header">240 USD Including Tax</span>
+            <span style="font-weight: 200" class="from-label-sub-header"
+              >&nbsp;240 USD incl. tax</span
+            ><br />
             <span class="from-label-description-header">
               Includes 2 tables, 3 chairs, and 3 exhibitor badges.
             </span>
@@ -264,7 +268,9 @@
           />
           <label for="PreferredBoothType_CurationBooth" class="form-label">
             <span class="from-label-header">Curation Booth</span>
-            <span class="from-label-sub-header">760 USD Including Tax</span>
+            <span style="font-weight: 200" class="from-label-sub-header"
+              >&nbsp;760 USD incl. tax</span
+            ><br />
             <span class="from-label-description-header">
               Offers a 2x2m space, including 2 tables, 3 chairs, and 3 exhibitor
               badges.
@@ -634,8 +640,9 @@
           imagination.
         </div>
         <div class="column layout-form-column-grid-1">
-          <span class="from-description-header">
-            Required Question. Maximum size: <strong>10 A4, 8MB</strong>.
+          <span class="from-description-header-ness">
+            Required Question. Please upload <strong>PDF</strong> file. Maximum
+            size: <strong>10 A4, 8MB</strong>.
           </span>
 
           <input type="file" id="fileInput" name="file" />
