massive content change

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <div class="tag2-m">
       <p>&nbsp;草率季&nbsp;</p>
     </div>
+    <!-- <div class="tag3-m">
+      <p>&nbsp;Soft POW 無限柔軟&nbsp;</p>
+    </div> -->
+
     <!-- moshimoshi -->
     <nav>
       <a class="vertical about" onclick="myAbout()">ABOUT</a>
@@ -107,10 +111,14 @@
     <div class="info">
       <div>
         2025 草率季 Taipei Art Book Fair<br /><br />
-        {時間Time}2025.11.21–23<br />
-        {地址Address}華山1914文化創意產業園區 東二 ABCD棟 Huashan Creative
-        Park<br />
-        {重要資訊 Info Log}<br />
+        [時間Time] 2025.11.21–23
+        <br />
+        &nbsp;&nbsp;- 11/21(Fri.) 13-21 <br />
+        &nbsp;&nbsp;- 11/22(Sat.) 11-20 <br />
+        &nbsp;&nbsp;- 11/23(Sun.) 11-18<br />
+        [地址Address] 華山1914文化創意產業園區 東二 ABCD棟 Huashan Creative Park
+        <br />
+        [重要資訊 Info Log]<br />
         <div id="info-log" style="white-space: pre-wrap">🚧 讀取中…</div>
       </div>
     </div>
@@ -119,24 +127,24 @@
     <div class="banner">
       <div class="banner-track">
         <div class="banner-content">
-          <span class="dot"></span> 台北！一零一！台北一零一！TAIPEI 101 No More
-          High Words！
-          <span class="dot"></span> 台北！一零一！台北一零一！TAIPEI 101 No More
-          High Words！
-          <span class="dot"></span> 台北！一零一！台北一零一！TAIPEI 101 No More
-          High Words！
-          <span class="dot"></span> 台北！一零一！台北一零一！TAIPEI 101 No More
-          High Words！
+          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
+          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
+          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
+          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
+          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
+          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
+          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
+          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
         </div>
         <div class="banner-content">
-          <span class="dot"></span> 台北！一零一！台北一零一！TAIPEI 101 No More
-          High Words！
-          <span class="dot"></span> 台北！一零一！台北一零一！TAIPEI 101 No More
-          High Words！
-          <span class="dot"></span> 台北！一零一！台北一零一！TAIPEI 101 No More
-          High Words！
-          <span class="dot"></span> 台北！一零一！台北一零一！TAIPEI 101 No More
-          High Words！
+          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
+          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
+          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
+          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
+          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
+          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
+          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
+          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
         </div>
       </div>
     </div>
@@ -147,6 +155,9 @@
     <div class="tag2">
       <p>&nbsp;草率季&nbsp;</p>
     </div>
+    <!-- <div class="tag3">
+      <p>&nbsp;Soft POW 無限柔軟&nbsp;</p>
+    </div> -->
     <!-- 關羽
   <div class="about-text">
     <p>一年一度的獨立藝文盛會「草率季」（Taipei Art Book Fair）在今年邁入第八屆。這個自2016年起年年舉行（除2021年因疫情停辦）的文創活動，迄今仍不斷打破大眾對市集的想像。<br><br>現場集結各路創作者、出版社、獨立書店與藝術家等攤位，展出各項獨立刊物、畫冊、藝術雜誌、美術書刊、特色服飾、配件、手做小物⋯⋯等極具特色的出版品與實體創作品，堪稱是年度最大攤的獨立出版創作者派對。
@@ -167,62 +178,110 @@
         <br />
         <div class="textcolumn">
           <div class="column zh">
-            <h2>歡迎來到2019台北藝術書展</h2>
+            <h2>歡迎來到 2025 草率季Soft POW 無限柔軟</h2>
             <p>
-              感謝您在第四屆台北藝術書展上的支持。歡迎上車！但是，在您繼續提交申請之前，請耐心等待一下。請仔細閱讀以下條件，併申請參加即表示您接受這些條件並同意受其約束。
+              感謝您對草率季-台北藝術書展的支持，2025年我們邁入第9屆，並命題「Soft
+              POW 無限柔軟
+              」，歡迎上車！在您繼續提交申請之前，請耐心閱讀以下參展條件，申請即表示您同意並接受。
             </p>
             <br />
-            <h3>活動時間</h3>
-            <p>開幕日: 2019/10/18 (五) 2PM - 9PM</p>
-            <p>書展期: 2019/10/19, 20 (六-日) 12PM - 8PM</p>
+            <h3>書展資訊</h3>
+            <div>
+              <span>時間: </span>11/21（五）13:00–21:00<br />
+              <span style="visibility: hidden">時間: </span
+              >11/22（六）11:00–20:00<br />
+              <span style="visibility: hidden">時間: </span
+              >11/23（日）11:00–18:00
+            </div>
             <p>
-              地點: 松山文創園區, 臺北市信義區光復南路133號
+              地點: 華山1914文化創意產業園區 東二 ABCD棟
               <small
-                ><a href="http://goo.gl/maps/2Pd5egRePJjuNgNn7"
-                  >goo.gl/maps</a
+                ><a href="https://g.co/kgs/mVt7cw6"
+                  >https://g.co/kgs/mVt7cw6</a
                 ></small
               >
             </p>
-
             <br />
             <h3>申明</h3>
             <p>
-              該申請表適用於希望擁有自己的桌子或展位以展示和出售其出版物或藝術品的參與者。當我們收到大量申請時，由於篇幅所限，我們可能會根據提交的信息拒絕該申請。
+              本表單適用於欲擁有桌位或空地展示／販售出版品、藝術品或裝置的參展者。當我們收到大量申請資料時，主辦單位保留依填表內容篩選、拒絕之權利。
             </p>
             <br />
-            <h3>最後期限</h3>
+            <h3>申請時程</h3>
             <p>
-              申請截止日期為7月19日（星期五24:00），我們將在8月2日（星期五24:00）通知您您的參與。必須在8月16日（星期五24:00）之前付款。
+              申請截止：2025/06/15（日）24:00<br />
+              審核通知：2025/06/30（一）12:00<br />
+              &nbsp;&nbsp;&nbsp; &bull; 通過者須於
+              2025/07/13（日）24:00前付款<br />
+              備取名單通知：2025/07/16（三）24:00<br />
+              &nbsp;&nbsp;&nbsp; &bull; 備取者須於
+              2025/07/22（二）24:00前付款<br />
             </p>
             <br />
             <h3>在展會上</h3>
             <p>
-              組委會將根據展位的整體佈局確定展位的位置。為了公平起見，在地板平面製作之前或之後，均不接受對展位位置偏好的要求。
+              &bull;
+              主辦單位將依整體展場佈局統一安排攤位位置，為公平起見，平面圖完成前後皆不接受位置偏好申請。<br />
+              &bull; 我們將於 9
+              月提供攤位樣式示意圖，並於展會前一天公布最終配置。<br />
+              &bull; 立面展示因場地空間限制隨機分配，且可能與其他單位共用。
             </p>
             <br />
             <h3>展位類型</h3>
-            <p><strong>策展攤位580 USD（含稅）</strong></p>
-            <p>對於希望在書展期間擴大工作空間（最好舉辦小型展覽）的參與者。</p>
-
-            <p><strong>一張正桌110美元（含稅）</strong></p>
-            <p>對於希望使用全尺寸表的參與者。</p>
-
-            <p><strong>戶外型35美元（含稅）</strong></p>
-            <p>對於希望使用全尺寸表的參與者。室外帶屋頂。</p>
-
-            <blockquote><small>* 桌子尺寸約150*60厘米。</small></blockquote>
+            <p><strong>ㄧ般書攤 ｜5,000 元（含稅）</strong></p>
+            <p>
+              針對以書本為主要創作／販售的參展單位，申請時需提出三本以上的書及審查資料。<br />
+              &nbsp;&nbsp;&nbsp; &bull; 基礎設備：桌面（120*60cm) 1 個、椅子 2
+              張、工作證 2 張、草率簿 1 本（含露出一面）
+            </p>
             <br />
-            <h3>關於去年台北藝術書展</h3>
-            <ul>
-              <li>
-                180個參展商（14個國家/地區中的75個國際展位，105個本地展位）
-              </li>
-              <li>6,000名付費遊客</li>
-            </ul>
+
+            <p><strong>創作攤｜8,000 元（含稅） </strong></p>
+            <p>
+              針對以各類商品為主要創作／販售的參展單位。<br />
+              &nbsp;&nbsp;&nbsp; &bull; 基礎設備：桌面（120*60cm) 1 個、椅子 2
+              張、工作證 2 張、草率簿 1 本（含露出一面）
+            </p>
+            <br />
+
+            <p><strong>裝置攤｜10,000 元（含稅）</strong></p>
+            <p>
+              針對大型裝置或空間創作為主的參展單位。&nbsp;&nbsp;
+              基礎設備：1.5M*1.5M空地、工作證 2 張、草率簿 1 本（含露出一面）
+            </p>
+            <br />
+
+            <p><strong>食物酒水攤｜13,000 元（含稅</strong></p>
+            <p>
+              針對以食物或飲品為主要販售類型的單位。 &nbsp;&nbsp;
+              基礎設備：桌面（180*60cm) 1 個、椅子 2 張、工作證 2 張、草率簿 1
+              本（含露出一面）
+            </p>
+            <blockquote>
+              <small
+                >*每個單位可於繳費階段可加購1張工作證，工作證僅限持證人本人使用，不得轉讓或借用；因場地空間有限，攤位人數超過3人者請另行申請攤位。如需臨時輪班，可於購票階段購買「親友票」。
+              </small>
+            </blockquote>
+            <br />
+            <h3>關於2024草率季</h3>
+            <p>
+              &nbsp;&nbsp;&nbsp; &bull; 450 參展單位（200 國際單位／250
+              本地單位），來自 30+ 國家／地區 <br />&nbsp;&nbsp;&nbsp; &bull;
+              12,000名付費遊客
+            </p>
+            <br />
+            <h3>迎接 草率十年</h3>
+            <p>
+              2026年，草率季十週年，我們將舉辦草率十年特場（預計將落在 3–4
+              月）。在十歲之際，我們將回到更實驗的精神持續探索藝術書展的更多可能，在此誠摯邀請您填寫本報名表時一併回覆
+              2026 年度參展意願，一起跳上草率季的全新旅程！<br /><br />
+
+              展期我們將試進度優先公布予有意願參展的各位，場地、精彩亮點等資訊會在2025
+              年草率季現場公布公開，敬請期待！
+            </p>
             <br />
             <h3>聯繫</h3>
             <p>hooroo@double-grass.com</p>
-            <p>tiffanyhoung@double-grass.com</p>
 
             <h3>
               <a
@@ -234,93 +293,116 @@
             </h3>
           </div>
           <div class="column en">
-            <h2>Welcome to Taipei Art Book Fair 2019!</h2>
+            <h2>
+              Welcome to the 2025 9th Annual Taipei Art Book Fair -Soft POW!
+            </h2>
             <p>
-              We appreciate your support as we’re heading towards the fourth
-              annual Taipei Art Book Fair. Welcome aboard! But just before you
-              go ahead and submit your application please bear with us for a
-              moment. Please carefully read the following conditions and by
-              applying to participate, you are accepting these conditions and
-              agree to be bound by them.
+              Thank you for your support—welcome aboard! Before you submit your
+              application, please read the following terms carefully. By
+              applying, you agree to abide by them.
             </p>
-
-            <h3>Fair Date</h3>
-            <p>Preview: 2019/10/18 (Fri) 14:00 - 21:00</p>
-            <p>Fair Hours: 2019/10/19, 20 (Sat-Sun) 12:00 - 20:00</p>
+            <div>
+              <span>Dates & Times</span>
+              Nov 21 (Fri) 13:00–21:00<br />
+              <span style="visibility: hidden">Dates & Times</span>
+              Nov 22 (Sat) 11:00–20:00<br />
+              <span style="visibility: hidden">Dates & Times</span>
+              Nov 23 (Sun) 11:00–18:00
+            </div>
             <p>
-              Venue: Taipei SongShan Cultural and Creative Park, No.133, Guangfu
-              South Road, Xinyi District, Taipei City 11072, Taiwan
+              Location: Huashan 1914 Creative Park, East 2 ABCD Halls
               <small
-                ><a href="http://goo.gl/maps/2Pd5egRePJjuNgNn7" target="_blank"
-                  >goo.gl/maps</a
+                ><a href="https://g.co/kgs/mVt7cw6" target="_blank"
+                  >(https://g.co/kgs/mVt7cw6)</a
                 ></small
               >
             </p>
             <br />
             <h3>About the participation</h3>
             <p>
-              This application form is for participants who wish to have their
-              own table or booth in which to exhibit and sell their publications
-              or artworks. As we receive great numbers of applications, we may
-              decline the application based on the submitted information due to
-              the limitation of the space.
+              This form is for participants who wish to reserve a table or booth
+              to display/sell publications, artworks, or installations. If we
+              receive more applications than we can accommodate, the organizers
+              reserve the right to screen or decline applications based on
+              submitted information.
             </p>
             <br />
             <h3>Deadline</h3>
             <p>
-              Application deadline is July 19th (Friday 24:00). We will notify
-              you regarding your participation by August 2nd (Friday 24:00).
-              Payment must be made by August 16th (Friday 24:00).
+              Deadline to Apply: June 15, 2025 (Sun) 24:00<br />
+              Acceptance Notices: June 30, 2025 (Mon) 12:00<br />
+              &nbsp;&nbsp;&nbsp; &bull; Successful applicants must pay by July
+              13 (Sun) 24:00<br />
+              Waitlist Notices: July 16, 2025 (Wed) 24:00<br />
+              &nbsp;&nbsp;&nbsp; &bull; Waitlisted applicants must pay by July
+              22 (Tue) 24:00<br />
             </p>
             <br />
             <h3>At the Fair</h3>
             <p>
-              The organizing committee will decide the position of booths
-              according to the overall layout of the space. No booth position
-              preference will be accepted before nor after the floor plan has
-              been made. Please make sure that your booth is attended at all
-              times during the fair. No booth position changes will be allowed.
-              Wi-Fi access and power sockets are not guaranteed. We recommend
-              bringing your own mobile hotspot and extension cord.
+              &bull; Booth locations will be assigned by the organizers
+              according to the overall floor plan; preferences cannot be
+              accommodated before or after layout finalization.<br />
+              &bull; In September we’ll share booth-style mockups; final floor
+              plan published one day before opening.<br />
+              &bull; Wall displays are allocated at random and may be shared
+              with neighboring booths.
             </p>
             <br />
             <h3>Booth Types</h3>
-            <p><strong>Curation Booth 580 USD (Including tax)</strong></p>
+            <p><strong>One Regular Booth USD$165 incl. tax</strong></p>
             <p>
-              For participants who wish to work on a bigger scale of space
-              during the book fair. Application will need to include a complete
-              plan of space use. Walls and up to two full-size tables are
-              included. The size of the booth space is around 4.5 square meters.
+              &nbsp;&nbsp;&nbsp; &bull; Includes: 120 × 60 cm table ×1, chairs
+              ×2, passes ×2, TPABF Catalog ×1 (one page featured)
             </p>
             <br />
-            <p><strong>One Regular Table 110 USD (Including tax)</strong></p>
+            <p><strong>Two Regular Booth USD$330 incl. tax</strong></p>
             <p>
-              For participants who wish to use a full-size table. Use of walls
-              is not guaranteed.
+              &nbsp;&nbsp;&nbsp; &bull; Includes: 120 × 60 cm table ×2, chairs
+              ×4, passes ×4, TPABF Catalog ×1 (one page featured)
             </p>
-
-            <p><strong>Outdoor Type 35 USD (Including tax)</strong></p>
+            <br />
+            <p><strong>Curation Booth USD$780 incl. tax</strong></p>
             <p>
-              For participants who wish to use a full-size table outdoors with a
-              roof.
+              &nbsp;&nbsp;&nbsp; &bull; Includes: 3M*3M space, 120 × 60 cm table
+              ×2, chairs ×4, passes ×3, TPABF Catalog ×1 (one page featured)
             </p>
 
             <blockquote>
-              <small>* Table size approximately 150x60 cm.</small>
+              <small
+                >* Each unit may purchase 1 additional pass during payment.
+                Passes are non-transferable and for the named holder only; no
+                “sharing.” For occasional shift-swaps, you may purchase a
+                “Friend Ticket” during ticketing.
+              </small>
             </blockquote>
             <br />
             <h3>Facts from 2018 Taipei Art Book Fair</h3>
-            <ul>
-              <li>
-                180 exhibitors (75 international booths from 14 countries + 105
-                local booths)
-              </li>
-              <li>6,000 paid visitors</li>
-            </ul>
+            <p>
+              &nbsp;&nbsp;&nbsp; &bull;450 exhibiting units (200 international,
+              250 local) from 30+ countries/regions<br />
+              &nbsp;&nbsp;&nbsp; &bull;12,000 paid visitors
+            </p>
+            <br />
+            <h3>Preparing for Taipei Art Book Fair’s 10-year anniversary</h3>
+            <p>
+              2026 marks the tenth year of Taipei Art Book Fair. We here at
+              Taipei Art Book Fair are ready to explore the boundary of how an
+              art-book-fair can be. The 10-year anniversary fair will be held in
+              Spring (March or April.) We look forward to hearing your interest
+              about joining the next spring edition in this application.
+              <br /><br />
+
+              The 10-year anniversary fair’s exact date will be provided asap to
+              the applicants who replied “Count me in.” Other info about the
+              10-year anniversary fair will be announced at 2025’s fair. We
+              can’t wait moving on to the new/experimental journey with you!
+              Stay tuned!
+            </p>
             <br />
             <h3>Contact</h3>
             <p>hooroo@double-grass.com</p>
-            <p>tiffanyhoung@double-grass.com</p>
+
             <br />
             <h3>
               <a
