miss content found

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
               </small>
             </blockquote>
             <br />
-            <h3>Facts from 2018 Taipei Art Book Fair</h3>
+            <h3>Last Year’s Highlights</h3>
             <p>
               &nbsp;&nbsp;&nbsp; &bull;450 exhibiting units (200 international,
               250 local) from 30+ countries/regions<br />
