--- a/index.html
+++ b/index.html
@@ -265,9 +265,8 @@
             <br />
             <h3>關於2024草率季</h3>
             <p>
-              &nbsp;&nbsp;&nbsp; &bull; 450 參展單位（200 國際單位／250
-              本地單位），來自 30+ 國家／地區 <br />&nbsp;&nbsp;&nbsp; &bull;
-              12,000名付費遊客
+              &bull; 450 參展單位（200 國際單位／250 本地單位），來自 30+
+              國家／地區 <br />&bull; 12,000名付費遊客
             </p>
             <br />
             <h3>迎接 草率十年</h3>
@@ -379,9 +378,9 @@
             <br />
             <h3>Last Year’s Highlights</h3>
             <p>
-              &nbsp;&nbsp;&nbsp; &bull;450 exhibiting units (200 international,
-              250 local) from 30+ countries/regions<br />
-              &nbsp;&nbsp;&nbsp; &bull;12,000 paid visitors
+              &bull; 450 exhibiting units (200 international, 250 local) from
+              30+ countries/regions<br />
+              &bull; 12,000 paid visitors
             </p>
             <br />
             <h3>Preparing for Taipei Art Book Fair’s 10-year anniversary</h3>
