tc0505 localupload logi adjust

--- a/localapplication.html
+++ b/localapplication.html
@@ -431,10 +431,11 @@
             ></span
           ><br />
           <div class="upload-container">
-            <input type="file" name="file" />
+            <input type="file" id="fileInput" name="file" />
             <input
               type="hidden"
-              name="formId"
+              name="entry.715764736"
+              id="uploadedFileUrl"
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="artwork" />
@@ -461,10 +462,11 @@
             ></span
           ><br />
           <div class="upload-container">
-            <input type="file" name="file" />
+            <input type="file" id="fileInput2" name="file" />
             <input
               type="hidden"
-              name="formId"
+              name="entry.1801583093"
+              id="uploadedFileUrl2"
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="proposal" />
@@ -799,9 +801,9 @@
       </div>
     </form>
 
-    <!-- <script src="upload.js"></script> -->
+    <script src="upload.js"></script>
     <script src="identity2.js"></script>
-    <script src="jump.js"></script>
+    <!-- <script src="jump.js"></script> -->
     <script src="yes.js"></script>
     <script src="password.js"></script>
     <!-- <script src="hide.js"></script> -->
